[project]
name = "guard-service"
version = "0.1.0"
description = "theeyebeta constitution guard — gRPC validation for agent outputs"
requires-python = ">=3.12"
dependencies = [
    "zinc-schemas",
    "zinc-proto",
    "grpcio>=1.68",
    "protobuf>=5.29",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "nats-py>=2.8",
    "structlog>=24.4",
    "python-dotenv>=1.0",
    "pydantic>=2.9",
    "redis>=5.0",
]

[tool.uv.sources]
zinc-schemas = { workspace = true }
zinc-proto = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/guard_service"]
