[project]
name = "master-orchestrator"
version = "0.1.0"
description = "theeyebeta master orchestrator — market trio workflows and order synthesis"
requires-python = ">=3.12"
dependencies = [
    "zinc-schemas",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "nats-py>=2.8",
    "structlog>=24.4",
    "python-dotenv>=1.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.4",
    "redis>=5.0",
    "prometheus-client>=0.25",
]

[tool.uv.sources]
zinc-schemas = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/master_orchestrator"]
