[project]
name = "oms"
version = "0.1.0"
description = "theeyebeta order management — C++ state machine orchestration"
requires-python = ">=3.12"
dependencies = [
    "zinc-native",
    "audit-service",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "nats-py>=2.8",
    "redis>=5.0",
    "structlog>=24.4",
    "python-dotenv>=1.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.4",
    "prometheus-client>=0.21",
]

[tool.uv.sources]
zinc-native = { workspace = true }
audit-service = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oms"]
