[project]
name = "rnd-agent"
version = "0.1.0"
description = "theeyebeta nightly R&D proposal service (tb_rnd_readonly)"
requires-python = ">=3.12"
dependencies = [
    "zinc-schemas",
    "zinc-proto",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psycopg[binary]>=3.2",
    "nats-py>=2.8",
    "structlog>=24.4",
    "python-dotenv>=1.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.4",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "grpcio>=1.68",
    "protobuf>=5.29",
]

[tool.uv.sources]
zinc-schemas = { workspace = true }
zinc-proto = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rnd_agent"]
