[project]
name = "snapshot-packager"
version = "0.1.0"
description = "theeyebeta snapshot packager — builds per-market daily snapshots"
requires-python = ">=3.12"
dependencies = [
    "zinc-schemas",
    "psycopg[binary,pool]>=3.2",
    "polars[rtcompat]>=1.12",
    "pyarrow>=18.0",
    "typer>=0.15",
    "structlog>=24.4",
    "jsonschema>=4.23",
    "python-dotenv>=1.0",
]

[tool.uv.sources]
zinc-schemas = { workspace = true }

[project.scripts]
tb-snapshot = "snapshot_packager.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snapshot_packager"]
